# EmurgoAcademyPlutusExamples

V2_110/Demeter/FromScratch/: FromScratch.cabal
