cabal-version:      3.4
name:               FromScratch
version:            1.1.0.0
author:             Hritik Soni
maintainer:         hothritik1@gmail.com
license:            Apache-2.0
build-type:         Simple

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hritik Soni
maintainer:         hothritik1@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

-- executable FromScratch
library
    exposed-modules:  SimpleValidator
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , plutus-tx
                    , plutus-tx-plugin
                    , plutus-ledger-api
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , text
                    , serialise

    hs-source-dirs:   src
    default-language: Haskell2010
